<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dished</string>
    <string name="menu_settings">Settings</string>
    <string name="button_enter_new">Enter a new dish</string>
    <string name="button_view">View dishes</string>
    <string name="title_activity_list_view">List of Dishes</string>
    <string name="title_activity_one_dish">OneDishActivity</string>

    
    <string name="newdish_Restaurant"> Restaurant </string>
    <string name="newdish_DishName"> Dish Name</string>
    <string name="newdish_Price"> Price</string>
    <string name ="newdish_PrepTime"> Preparation Time</string>
    <string name="newdish_Save"> Save</string>
    <string name="newdish_Spicy"> Spicy?</string>
    <string name="newdish_Sweet"> Sweet?</string>
    <string name="newdish_Overall"> Overall?</string>
    <string name="newdish_Comment"> Comments</string>
    
    <string name="sortBy_prompt">Sort by: </string>
    <string-array name="sortBy_arrays">
        <item>Dish Name</item>
        <item>Restaurant Name</item>
        <item>Order Submitted</item>
    </string-array>
    
</resources>